--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Sidebar from '../components/Sidebar.astro';
+import { Header } from '../components/Header/Header';
+import Sidebar from '../components/Sidebar';
 
 interface Props {
 	title: string;
@@ -19,9 +20,13 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		 <Sidebar />
-		<slot />
-	</body>
+<Header client:load/>
+
+<main >
+	<Sidebar client:load />
+	<slot />
+</main>
+</body>
 </html>
 <style is:global>
 	:root {
@@ -37,7 +42,6 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
 	}
 	code {
 		font-family:
@@ -50,4 +54,6 @@ const { title } = Astro.props;
 			Courier New,
 			monospace;
 	}
+
 </style>
+
