added new NavBar

--- a/src/pages/category.astro
+++ b/src/pages/category.astro
@@ -4,6 +4,6 @@ import Layout from '../layouts/Layout.astro';
 ---
 <Layout title="category">
   <h1>Category page</h1>
-  <MyComponent message='hello its categoryPage!!'/>
+  <MyComponent client:only/>
   <p>This is the about page.</p>
 </Layout>
