--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,10 +20,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Sidebar client:only />
 <Header client:load/>
 
 <main >
-	<Sidebar client:load />
 	<slot />
 </main>
 </body>
