--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,6 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout title="Home">
-  <h1>Welcome to Astro</h1>
+  <h1>Welcome to Kiwi Beauty Center</h1>
   <p>This is the home page.</p>
 </Layout>
