add service table and currentCategoryName

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -2,8 +2,6 @@
 import MyComponent from '../components/MyComponent';
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="category">
-  <h1>Category page</h1>
+<Layout title="services">
   <MyComponent client:only/>
-  <p>This is the about page.</p>
 </Layout>
