--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,7 +1,7 @@
 ---
-import MyComponent from '../components/MyComponent';
+import ServicePage from './ServicePage';
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="services">
-  <MyComponent client:only/>
+<Layout title="Kiwi Beauty Center">
+  <ServicePage client:only/>
 </Layout>
