--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,11 @@
 ---
 import Sidebar from '../components/Sidebar/Sidebar';
-
 interface Props {
 	title: string;
 }
+
+
+
 
 const { title } = Astro.props;
 ---
@@ -17,13 +19,15 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" />
 	</head>
 	<body>
-	<Sidebar client:only />
+			<Sidebar client:only />
 
 <main >
 	<slot />
 </main>
+<footer>s</footer>
 </body>
 </html>
 <style is:global>
@@ -38,9 +42,9 @@ const { title } = Astro.props;
 			white 60%
 		);
 	}
-	html {
-		font-family: system-ui, sans-serif;
-	}
+	body {
+				font-family: 'Raleway', sans-serif	
+			}
 	code {
 		font-family:
 			Menlo,
