--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="Home">
+<Layout title="Kiwi Beauty Center">
   <h1>Welcome to Kiwi Beauty Center</h1>
   <p>This is the home page.</p>
 </Layout>
