add and config  tanstack query and tanstack routers

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="Kiwi Beauty Center">
-  <h1>Welcome to Kiwi Beauty Center</h1>
-  <p>This is the home page.</p>
-</Layout>
+<Layout title="Kiwi Beauty Center"/>
+
+<!-- </Layout> -->
