--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,12 @@
 ---
+
 import Sidebar from '../components/Sidebar/Sidebar';
 interface Props {
 	title: string;
 }
 
+			import {router, TestRoutes} from '../components/TestRoutes/TestRoutes'
+import { StrictMode } from 'react';
 
 
 
@@ -22,8 +25,8 @@ const { title } = Astro.props;
 		 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" />
 	</head>
 	<body>
-			<Sidebar client:only />
-
+  	<TestRoutes client:only="react"/>
+		<!-- <Sidebar client:only="react" /> -->
 <main >
 	<slot />
 </main>
