--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -1,7 +1,7 @@
 ---
-import ServicePage from './ServicePage';
+// import ServicePage from './ServicePage';
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="Kiwi Beauty Center">
-  <ServicePage client:only/>
-</Layout>
+<Layout title="Kiwi Beauty Center"/>
+  <!-- <ServicePage client:only/> -->
+<!-- </Layout> -->
