--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,14 +1,10 @@
 ---
-
-import Sidebar from '../components/Sidebar/Sidebar';
 interface Props {
 	title: string;
 }
 
-			import {router, TestRoutes} from '../components/TestRoutes/TestRoutes'
-import { StrictMode } from 'react';
-
-
+import { Header} from '../components/Header/Header'
+import {Footer} from '../components/Footer/Footer'
 
 const { title } = Astro.props;
 ---
@@ -25,12 +21,11 @@ const { title } = Astro.props;
 		 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" />
 	</head>
 	<body>
-  	<TestRoutes client:only="react"/>
-		<!-- <Sidebar client:only="react" /> -->
+  	<Header client:only="react"/>
 <main >
 	<slot />
 </main>
-<footer>s</footer>
+<Footer client:only/>
 </body>
 </html>
 <style is:global>
