--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,9 @@
 interface Props {
 	title: string;
 }
-
 import { Header} from '../components/Header/Header'
 import {Footer} from '../components/Footer/Footer'
-
+import {App} from '../components/App/App'
 const { title } = Astro.props;
 ---
 
@@ -20,13 +19,14 @@ const { title } = Astro.props;
 		<title>{title}</title>
 		 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" />
 	</head>
-	<body>
+	<App client:only="react"/>
+	<!-- <body>
   	<Header client:only="react"/>
 <main >
 	<slot />
 </main>
-<Footer client:only/>
-</body>
+<Footer client:only="react"/>
+</body> -->
 </html>
 <style is:global>
 	:root {
