--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
 ---
-<Layout title="Kiwi Beauty Center"/>
+
+<Layout title="Kiwi Beauty Center" />
