--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,11 +40,7 @@ const { mobile, tablet, desktop, desktopL, desktop4k } = BREAKPOINTS
       margin: 0;
       padding: 0;
       /* min-height: 100vh; */
-      /* font-family: 'Raleway', sans-serif; */
-      /* background-image: url(/images/DSC_2781.webp); */
-      /* background-repeat: no-repeat; */
-      /* background-size: cover; */
-      /* background-position: center; */
+      font-family: 'Raleway', sans-serif;
       margin-left: auto;
       margin-right: auto;
       max-width: 1440px;
